@@ -5,7 +5,7 @@
 
 subroutine f (s)
   character(len=3) :: s
-  write (*,*), s ! { dg-final { gdb-test 7 "s" "'foo'" } }
+  write (*,*) s ! { dg-final { gdb-test 7 "s" "'foo'" } }
 end
   call f ('foo')
 end
